Begin user domain implementation
